--- a/css/mypage.css
+++ b/css/mypage.css
@@ -1,23 +1,3 @@
-#con_page .con_menu, #con_page .con_bn, #con_page .wrp_my_profile {
-  width: 90%;
-  margin: auto;
-}
-@media only screen and (min-width: 1200px) {
-  #con_page .con_menu, #con_page .con_bn, #con_page .wrp_my_profile {
-    padding: 0 5%;
-  }
-}
-@media print {
-  #con_page .con_menu, #con_page .con_bn, #con_page .wrp_my_profile {
-    padding: 0 5%;
-  }
-}
-@media only screen and (max-width: 1199px) {
-  #con_page .con_menu, #con_page .con_bn, #con_page .wrp_my_profile {
-    width: 91.6666666667%;
-  }
-}
-
 #header .box_gnav li:nth-child(4) a {
   opacity: 1;
 }
@@ -41,7 +21,6 @@
 }
 #con_page .wrp_my_profile {
   background-color: white;
-  max-width: 970px;
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_my_profile {
@@ -49,15 +28,37 @@
   }
 }
 #con_page .wrp_my_profile .con_my_profile {
+  margin: 70px 5% 0 5%;
+  margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-end;
-  padding-bottom: 30px;
+  padding: 0;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_my_profile .con_my_profile {
+    margin: 8% 4% 0 4%;
+  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_my_profile .con_my_profile {
-    padding-bottom: 5%;
+    margin: 11% 4% 0 4%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .wrp_my_profile .con_my_profile {
+    margin-top: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_my_profile .con_my_profile {
+    margin-top: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .wrp_my_profile .con_my_profile {
+    padding: 8% 0 5%;
   }
 }
 #con_page .wrp_my_profile .con_my_profile .box_stat {
@@ -247,7 +248,7 @@
   }
 }
 #con_page .wrp_my_profile .con_my_profile .box_exp .exp_bar .exp {
-  width: 30%;
+  width: 0;
   height: 8px;
   background-color: #5726cb;
   transition: width 1s ease;
@@ -303,7 +304,7 @@
 }
 @media only screen and (max-width: 767px) {
   #con_page .wrp_my_profile .con_my_profile .btn_point a {
-    padding: 3%;
+    padding: 4%;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
@@ -327,14 +328,34 @@
   }
 }
 #con_page .con_bn {
-  max-width: 970px;
+  margin-top: 50px;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_bn {
+    margin-top: 50px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_bn {
+    margin-top: 5%;
+  }
 }
 #con_page .con_bn .box_bn {
   background-color: #f2f4f6;
   box-sizing: border-box;
 }
 #con_page .con_menu {
-  max-width: 970px;
+  margin: 70px 5% 0 5%;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_menu {
+    margin: 8% 4% 0 4%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_menu {
+    margin: 11% 4% 0 4%;
+  }
 }
 #con_page .con_menu .box_menu {
   margin: 50px 0;
@@ -390,7 +411,7 @@
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_menu .box_menu dd a {
-    padding: 3% 0;
+    padding: 5% 0;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
@@ -409,7 +430,7 @@
 }
 #con_page .con_menu .box_menu dd a .box_st i {
   height: 21px;
-  margin-right: 4px;
+  margin-right: 8px;
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_menu .box_menu dd a .box_st i {
@@ -449,5 +470,15 @@
   #con_page .con_menu dd a:hover {
     background-color: #f2f4f6;
     border-radius: 8px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #con_page .con_my_profile, #con_page .con_menu {
+    max-width: 970px;
+  }
+}
+@media print {
+  #con_page .con_my_profile, #con_page .con_menu {
+    max-width: 970px;
   }
 }
