--- a/css/scss/mypage.scss
+++ b/css/scss/mypage.scss
@@ -208,8 +208,9 @@
 				}
 			}
 			&.point {
-				.cp {
+				.cp a {
 					@include fsz-cha(24,24,20);
+					@include tit_xl;
 					font-weight: bold;
 				}
 			}
