--- a/css/mypage.css
+++ b/css/mypage.css
@@ -446,17 +446,29 @@
   background-size: cover;
   opacity: 0.3;
 }
-#con_page .con_menu .box_menu.point .cp {
+#con_page .con_menu .box_menu.point .cp a {
   font-size: 150%;
+  font-size: 175%;
+  font-weight: 700;
   font-weight: bold;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
-  #con_page .con_menu .box_menu.point .cp {
+  #con_page .con_menu .box_menu.point .cp a {
     font-size: 150%;
   }
 }
 @media only screen and (max-width: 767px) {
-  #con_page .con_menu .box_menu.point .cp {
+  #con_page .con_menu .box_menu.point .cp a {
+    font-size: 125%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_menu .box_menu.point .cp a {
+    font-size: 150%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_menu .box_menu.point .cp a {
     font-size: 125%;
   }
 }
